Wed Nov  8 02:57:15 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdc_util.c (): Added new helper functions
		dbentry_has_key_for_enctype(), dbentry_supports_enctype(),
		and select_session_keytype().

	* kdc_preauth.c: Added support for the ENC_TIMESTAMP
		preauthentication scheme.

	* do_tgs_req.c (process_tgs_req): Fixed the keytype/enctype
		selection criteria for the server key, and the ticket
		session key.

	* do_as_req.c (process_as_req): Added calls to the kdc
		preauthentication verification routines.  Fixed the
		keytype/enctype selection criteria for the client key, the
		server key, and the ticket session key.

	* main.c (finish_realm): Make sure all parts of the realm
		structure are freed properly.
		(main): Free the kcontext krb5_context.

Fri Oct  6 00:07:49 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdc_preauth.c (get_preauth_hint_list): Fix missing indirection
		in get_hint_list.

	* kdc_util.c (validate_as_request): Remove preauthentication
		check; this is handled in do_as_req.c

	* do_tgs_req.c (process_tgs_req): Use a slightly more compressed
		logging format.

	* do_as_req.c (process_as_req): Unify the logging and error packet
		production, to make sure that both logging and an error
		packet is returned for each error condition.  Pass 
		e_data to prepare_as_error so that the proper
		preauthentication hint list can be passed back to the client.

Thu Oct  5 21:23:12 1995  Theodore Y. Ts'o  <tytso@dcl>

	* network.c (setup_network):
	* main.c (initialize_realms): Massive revamp of how the network
		ports are setup.  The default port list for a realm is
		read from [kdcdefaults]/kdc_ports from the kdc.conf file.
		For each realm, a list of ports can be specified in 
		[realms]/<realm>/kdc_ports.  

	* extern.h (kdc_realm_t): Remove realm_pport and realm_sport, and
		added realm_ports.

	* do_tgs_req.c (process_tgs_req):
	* do_as_req.c (process_as_req):
	* dispatch.c (dispatch): Pass the portnumber of the incoming